--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
     <div class="container">
         <h1>Bienvenido</h1>
         <form>
-            <label for="nombre">Nombre Completo:</label>
+            <label for="nombre">Nombre Completo SOY POTER:</label>
             <input type="text" id="nombre" name="nombre" placeholder="Ingresa tu nombre">
 
             <label for="email">Correo Electrónico:</label>
